homework/22.8/k8s/service/mt-nginx.yml
apiVersion: v1
kind: Service
metadata:
  name: mt-nginx-svc
spec:
  selector:
    app: mt-nginx
  type: NodePort
  ports:
  - name: web
    port: 80
    protocol: TCP
    nodePort: 30080
