homework/22.8/k8s/service/nginx-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: ingress.test.ru
    http:
      paths:
        - path: /
          pathType: ImplementationSpecific
          backend: 
            service:
              name: nginx
              port:
                number: 80
  tls:
    - hosts:
      - ingress.test.ru
      secretName: nginx-tls
